--- a/part0/0.1_example.html
+++ b/part0/0.1_example.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
+    <link href="0.2_example.css" rel="stylesheet" />
   </head>
   <body>
     <h1>Test HTML page</h1>
     <img src="images/firefox-icon.png" alt="Firefox Icon" />
     <!-- 4 heading levels: -->
-    <h1>My main title</h1>
+    <h1 id="mainTitle">My main title</h1>
     <h2>My top level heading</h2>
-    <h3>My subheading</h3>
+    <h3 class="heading">My subheading</h3>
     <h4>My sub-subheading</h4>
     <p>This is a single paragraph</p>
     <p>
