styled with opensans and made it super colourful

--- a/part0/0.1_example.html
+++ b/part0/0.1_example.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
-    <link href="0.2_example.css" rel="stylesheet" />
+    <!-- <link href="0.2_example.css" rel="stylesheet" /> !-->
+    <link
+  href="https://fonts.googleapis.com/css?family=Open+Sans"
+  rel="stylesheet" />
+    <link href="0.2_example_serious.css" rel="stylesheet" />
   </head>
   <body>
     <h1>Test HTML page</h1>
-    <img src="images/firefox-icon.png" alt="Firefox Icon" />
+    <img src="firefox-icon.jpeg" alt="Firefox Icon" />
     <!-- 4 heading levels: -->
     <h1 id="mainTitle">My main title</h1>
     <h2>My top level heading</h2>
