--- a/part0/0.1_example.html
+++ b/part0/0.1_example.html
@@ -40,6 +40,28 @@
     <a href="https://www.mozilla.org/en-US/about/manifesto/">
       Mozilla Manifesto
     </a>
+    <form action="/my-handling-form-page" method="post">
+      <p>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="user_name" />
+      </p>
+      <p>
+        <label for="mail">Email:</label>
+        <input type="email" id="mail" name="user_email" />
+      </p>
+      <p>
+        <label for="msg">Message:</label>
+        <textarea id="msg" name="user_message"></textarea>
+      </p>
+      <p>
+        <input type="text" value="by default this element is filled with this text" />
+        <textarea>
+          by default this element is filled with this text
+        </textarea>
+      </p>
+      <p class="button">
+        <button type="submit">Send your message</button>
+      </p>  
 
   </body>
 </html>
